- fix overflow bug for sidebar - create subjects for staging env

--- a/dll/static/src/scss/sidebar.scss
+++ b/dll/static/src/scss/sidebar.scss
@@ -143,6 +143,7 @@ $sidebar-preview-button-color: darken($sidebar-preview-color, 8%);
     font-size: 0.9rem;
     height: auto;
     display: block;
+    overflow: auto;
   }
   .sidebar__nav-item {
     display: block;
